fix wrapped lines causing timestamps to misalign
concourse/concourse#361

--- a/web/assets/css/build.less
+++ b/web/assets/css/build.less
@@ -45,37 +45,33 @@
   }
 }
 
-.timestamped-logs {
+.timestamped-line {
   display: flex;
   flex-direction: row;
 
-  .timestamp-times {
-    margin: -10px 10px 0 -10px;
-    flex-grow: 0;
-    flex-shrink: 1;
-    padding: 10px 0;
+  .timestamped-content {
+    word-break: break-all;
+  }
 
-    .timestamp {
-      padding: 0 10px;
+  .timestamp {
+    padding-right: 20px;
+    flex-shrink: 0;
 
-      a {
-        color: @base03;
-        display: inline-block;
+    a {
+      color: @base03;
+      display: inline-block;
 
-        &:hover {
-          color: @base06;
-        }
-      }
-
-      &.timestamp-highlighted {
-        a {
-          color: @base0A;
-        }
+      &:hover {
+        color: @base06;
       }
     }
   }
 
-  .timestamp-logs {
-    flex-grow: 1;
+  &.highlighted-line {
+    background: @base02;
+
+    .timestamp a {
+      color: @base0A;
+    }
   }
 }
